<resources>
    <string name="app_name">AtipaxApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recover_password">¿Olvidaste tu contraseña?</string>
    <string name="recover_pasword_title">Recupera tu contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- GENERALES  -->
    <string name="btnVolver">Volver</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_recuperar">Recuperar</string>
    <string name="confirmacion">Confirmacion</string>

    <!-- ITEM PROVEEDOR  -->
    <!-- label sin datos  -->

    <string name="nombreLabelP">Nombre</string>
    <string name="direccionLabelP">Direccion</string>
    <string name="correoLabelP">Correo</string>
    <string name="telefonoLabelP">Telefono</string>
    <!-- label con datos  -->
    <string name="codigoProveedor"></string>
    <string name="nombreProveedor"></string>
    <string name="direccionProveedor"></string>
    <string name="correoProveedor"></string>
    <string name="telefonoProveedor"></string>
    <!-- button eliminar y actualizar proveedor-->
    <string name="btn_eliminar_p">Eliminar</string>
    <string name="btn_actualizar_p">"Actualizar</string>

    <!-- FRAGMENT PROVEEDOR  -->

    <string name="tituloProveedor">PROVEEDORES</string>
    <string name="btn_agregar_p"></string>


    <!-- FRAGMENT AGREGAR PROVEEDOR  -->
    <string name="txt_codigoP">Codigo</string>
    <string name="txt_nombreP">Nombre</string>
    <string name="txt_direccionP">Direccion</string>
    <string name="txt_correoP">Correo</string>
    <string name="txt_telefonoP">Telefono</string>
    <string name="btn_agregar_proveedor">Agregar</string>
    <!-- MENSAJE ALERTA PROVEEDOR  -->

    <string name="alerta_p">Mensaje</string>
    <string name="mensaje_actualizacion_p"> Se actualizó la información del proveedor</string>
    <string name="mensaje_eliminar_p">¿Desea eliminar el proveedor?</string>
    <string name="mensaje_guardar_p">Se agregó correctamente el proveedor</string>

    <string name="aceptar_p">Aceptar</string>

    <!-- ITEM HOTEL  -->
    <!-- label sin datos  -->
    <string name="destinoLabel">Destino</string>
    <string name="nombreLabel">Nombre</string>
    <string name="descripcionLabel">Descripcion</string>
    <string name="precioLabel">Precio</string>
    <string name="proveedorLabel">Proveedor</string>
    <!-- label con datos  -->
    <string name="destinoHotel"></string>
    <string name="nombreHotel"></string>
    <string name="descripcionHotel"></string>
    <string name="precioHotel"></string>
    <string name="codigoHotel"></string>
    <string name="proveedorHotel"></string>
    <!-- button eliminar y actualizar -->
    <string name="btn_eliminar_h">Eliminar</string>
    <string name="btn_actualizar_h">Actualizar</string>


    <!-- FRAGMENT HOTEL  -->

    <string name="tituloHotel">HOTELES</string>
    <string name="btn_agregar_h"></string>


    <!-- FRAGMENT AGREGAR HOTEL  -->
    <string name="txt_codigo">Codigo</string>
    <string name="txt_destino">Destino</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="txt_proveedor">Proveedor</string>
    <string name="btn_agregar_hotel">Agregar</string>

    <string name="alerta">Mensaje</string>
    <string name="mensaje_actualizacion"> Se actualizó la información del hotel</string>
    <string name="mensaje_eliminar">¿Quiere eliminar el Hotel?</string>
    <string name="mensaje_guardar">Se agregó correctamente el hotel</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="coP">Cod</string>
    <string name="namP">Nombre</string>


    <!-- ITEM TOUR  -->
    <!-- label sin datos  -->
    <string name="destinoTLabel">Destino</string>
    <string name="tipoTLabel">Tipo</string>
    <string name="descripcionTLabel">Descripcion</string>
    <string name="precioTLabel">Precio</string>
    <string name="proveedorTLabel">Proveedor</string>
    <!-- label con datos  -->
    <string name="destinoTour"></string>
    <string name="descripcionTour"></string>
    <string name="precioTour"></string>
    <string name="tipoTour"></string>
    <string name="proveedorTour"></string>


    <!-- FRAGMENT AGREGAR TOUR  -->

    <string name="txt_destinoT">Destino</string>
    <string name="txt_precioT">Precio</string>
    <string name="txt_tipoT">Tipo</string>
    <string name="txt_descripcionT">Descripcion</string>
    <string name="txt_proveedorT">Proveedor</string>
    <string name="btn_agregar_tour">Agregar</string>

    <string name="alertaT">Mensaje</string>
    <string name="mensaje_actualizacionT"> Se actualizó la información del tour</string>
    <string name="mensaje_eliminarT">¿Desea eliminar el tour?</string>
    <string name="mensaje_guardarT">Se agregó correctamente el tour</string>
    <!-- FRAGMENT TOUR  -->

    <string name="tituloTour">TOURS</string>
    <string name="btn_agregar_t"></string>



    <string-array name="proveedores_array">

    </string-array>

    <!-- FRAGMENT CONSULTA PAQUETES-->
    <string name="consulta_paquetes_titulo">Paquetes</string>

    <!-- FRAGMENT CONSULTAS FULLDAYS-->
    <string name="consulta_titulo_fulldays">Full days</string>


    <string name="campo">*Obligatorio</string>
    <string name="solonumero">Solo 9 dígitos</string>
</resources>