<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:id="@+id/lbl_codigoProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/codigoProveedor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lbl_codigoP"
                android:layout_marginStart="10dp" />

        <TextView
                android:id="@+id/lbl_nombreProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/nombreProveedor"
                app:layout_constraintTop_toBottomOf="@+id/lbl_codigoProveedor"
                app:layout_constraintStart_toEndOf="@+id/lbl_nombreP"
                android:layout_marginStart="10dp" />

        <TextView
                android:id="@+id/lbl_direccionProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/direccionProveedor"
                app:layout_constraintTop_toBottomOf="@+id/lbl_nombreProveedor"
                app:layout_constraintStart_toEndOf="@+id/lbl_direccionP"
                android:layout_marginStart="38dp" />

        <TextView
                android:id="@+id/lbl_correoProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/correoProveedor"
                app:layout_constraintTop_toBottomOf="@+id/lbl_direccionProveedor"
                app:layout_constraintStart_toEndOf="@+id/lbl_correoP"
                android:layout_marginStart="38dp" />

        <TextView
                android:id="@+id/lbl_telefonoProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/telefonoProveedor"
                app:layout_constraintTop_toBottomOf="@+id/lbl_correoProveedor"
                app:layout_constraintStart_toEndOf="@+id/lbl_telefonoP"
                android:layout_marginStart="38dp" />



        <TextView
                android:id="@+id/lbl_codigoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigoLabelP"

                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp" />

        <TextView
                android:text="@string/nombreLabelP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_nombreP"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_codigoP" />

        <TextView
                android:text="@string/direccionLabelP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_direccionP"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_nombreP" />

        <TextView
                android:text="@string/correoLabelP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_correoP"
                tools:layout_editor_absoluteY="80dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_direccionP" />

        <TextView
                android:text="@string/telefonoLabelP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_telefonoP"
                tools:layout_editor_absoluteY="80dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_correoP" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>