<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardElevation="1dp"
        app:cardBackgroundColor="#FFFFFF">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">


        <TextView
                android:text="@string/destinoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_destinoT"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/varela_round" />
        <TextView
                android:text="Tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_tipoT"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_destinoT"
                android:fontFamily="@font/varela_round" />
        <TextView
                android:text="@string/descripcionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_descripcionT"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_tipoT"
                android:fontFamily="@font/varela_round" />

        <TextView
                android:text="@string/precioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_precioT"
                tools:layout_editor_absoluteY="80dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_descripcionT"
                android:fontFamily="@font/varela_round" />


        <TextView
                android:text="@string/proveedorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_proveedorT"
                tools:layout_editor_absoluteY="80dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/lbl_precioT"
                android:fontFamily="@font/varela_round"

                android:layout_marginBottom="4dp" />

    </LinearLayout>


    <LinearLayout
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginLeft="124dp">


        <TextView
                android:id="@+id/lbl_destinoTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/destinoHotel"
                android:fontFamily="@font/varela_round"

                android:layout_marginStart="38dp"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/lbl_tipoTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/descripcionHotel"
                app:layout_constraintTop_toBottomOf="@+id/lbl_destinoTour"
                android:fontFamily="@font/varela_round"
                android:layout_marginStart="38dp" />

        <TextView
                android:id="@+id/lbl_descripcionTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/descripcionHotel"
                app:layout_constraintTop_toBottomOf="@+id/lbl_tipoTour"
                android:fontFamily="@font/varela_round"
                android:layout_marginStart="38dp" />

        <TextView
                android:id="@+id/lbl_precioTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/precioHotel"
                app:layout_constraintTop_toBottomOf="@+id/lbl_descripcionTour"
                android:fontFamily="@font/varela_round"
                android:layout_marginStart="38dp" />

        <TextView
                android:id="@+id/lbl_proveedorTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/proveedorHotel"
                app:layout_constraintTop_toBottomOf="@+id/lbl_precioTour"
                android:fontFamily="@font/varela_round"
                android:layout_marginStart="38dp"
                android:layout_marginBottom="4dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>