<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.views.proveedor.ProveedorAgregarFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.119">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCodigoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_codigoP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCodigo"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombreEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombreP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDireccionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_direccionP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDireccion"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCorreoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_correoP" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreo"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp"
            android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTelefonoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_telefonoP" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"

            android:layout_marginTop="28dp"
            android:text="@string/btn_agregar_proveedor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:text="@string/btn_actualizar_p"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
            android:layout_marginTop="28dp" />

    <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="284dp"
            android:text="@string/btn_eliminar_p"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
            android:layout_marginTop="28dp" />

</androidx.constraintlayout.widget.ConstraintLayout>