<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.hotel.HotelAgregarFragment">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDestino"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCodigo"
            app:layout_constraintVertical_bias="0.119">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDestinoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_destino" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDestino"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDescripcionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_descripcion" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp"
            android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPrecioEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_precio" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtProveedor"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/txtPrecio"
            app:layout_constraintVertical_bias="0.119"
            tools:layout_editor_absoluteX="0dp">

        <AutoCompleteTextView
                android:id="@+id/autoComProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_proveedor"
                android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"

            android:text="@string/btn_agregar_hotel"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/txtProveedor"
            android:layout_marginTop="32dp" />

    <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="32dp"
            android:text="@string/btn_actualizar_h"
            app:layout_constraintTop_toBottomOf="@+id/txtProveedor" />

    <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="292dp"
            android:layout_marginTop="32dp"
            android:text="@string/btn_eliminar_h"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/txtProveedor" />


</androidx.constraintlayout.widget.ConstraintLayout>