<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.views.proveedor.ManteProveedorFragment">

    <TextView
            android:id="@+id/lbl_titulo_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tituloProveedor"
            android:textSize="17dp"

            android:textColor="@color/titul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp" />

    <ImageButton
            android:src="@drawable/ic_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_agregar_proveedor"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="70dp"
            app:layout_constraintStart_toEndOf="@+id/lbl_titulo_p" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_proveedores"
            android:layout_width="374dp"
            android:layout_height="0dp"

            tools:itemCount="7"
            app:layout_constraintTop_toBottomOf="@+id/lbl_titulo_p"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="20dp"
            android:text="@string/btn_agregar_h"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:text="@string/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_volver_inicio"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/btn_agregar_proveedor"
            android:layout_marginStart="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>