<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.hotel.ManteHotelFragment">
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
                android:text="@string/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btn_volver_inicio"
                android:src="@drawable/ic_atras"

                android:background="@color/white" />

        <TextView
                android:id="@+id/lbl_titulo_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tituloHotel"
                android:textSize="17dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/titul"
                android:layout_marginLeft="60dp"
                android:fontFamily="@font/varela_round" />

        <ImageButton
                android:src="@drawable/ic_agregar"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_agregar_hotel"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginLeft="60dp"
                app:layout_constraintStart_toEndOf="@+id/lbl_titulo_p"
                android:background="@color/white"  />

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hoteles"
            android:layout_width="374dp"
            android:layout_height="0dp"

            tools:itemCount="7"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:text="@string/btn_agregar_h"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="7dp" />



</androidx.constraintlayout.widget.ConstraintLayout>